Docs: Fix table contrast

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -15,6 +15,31 @@
   border-right: 1px solid #30363d;
 }
 
+/* Tables */
+table {
+  display: table;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead tr {
+  background-color: #161b22;
+}
+
+th, td {
+  padding: 8px 12px;
+  border: 1px solid #30363d;
+  color: #e6edf3;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #0d1117;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #161b22;
+}
+
 /* Default size for all Plinky icon images */
 img[src*="icons/"] {
     display: inline-block;
